--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://saiadithya:sujatha@cluster0.fzzkocu.mongodb.net/?retryWrites=true&w=majority&
+PORT = 5000
+JWT_SECRET = bankaidayo
