--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-MONGO_URI=mongodb+srv://saiadithya:sujatha@cluster0.fzzkocu.mongodb.net/?retryWrites=true&w=majority&
+MONGO_URI=mongodb+srv://saiadithya:sujatha@cluster0.fzzkocu.mongodb.net/chatapp?retryWrites=true&w=majority&
 PORT = 5000
 JWT_SECRET = bankaidayo
+NODE_ENV=development
